feat: 설문 API 보완 및 상태 변경 기능, 리다이렉트 이동 기능 추가